decoupling roya-workflow into standalone project, and adding new eleborate example